--- a/frontendservices/package.json
+++ b/frontendservices/package.json
@@ -18,6 +18,7 @@
     "body-parse": "^0.1.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "openai": "^5.3.0",
     "react": "^19.1.0",
